--- a/unosquare/pom.xml
+++ b/unosquare/pom.xml
@@ -27,6 +27,12 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.4.0</version>
+</dependency>
 
   </dependencies>
 </project>
